grafo fixeado